k8s/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja-backend
  namespace: vikunja
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vikunja-backend
  template:
    metadata:
      labels:
        app: vikunja-backend
    spec:
      containers:
        - name: vikunja-backend
          image: dragana0407/vikunja-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3456
          volumeMounts:
            - name: vikunja-files
              mountPath: /app/vikunja/files
      volumes:
        - name: vikunja-files
          persistentVolumeClaim:
            claimName: vikunja-files
