k8s/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: vikunja-backend
  namespace: vikunja
spec:
  selector:
    app: vikunja-backend
  ports:
    - port: 3456
      targetPort: 3456
  type: ClusterIP
