k8s/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: vikunja-frontend
  namespace: vikunja
spec:
  selector:
    app: vikunja-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
