k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja
  namespace: vikunja
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: vikunja.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: vikunja-backend
                port:
                  number: 3456
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vikunja-frontend
                port:
                  number: 80
